<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/contact_number"
        android:inputType="textCapWords"
        android:key="contactNumber"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/contact_number_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="enableGps"
        android:summary="@string/enable_gps_help"
        android:title="@string/enable_gps" />

    <EditTextPreference
        android:defaultValue="I fall in the street, please call me in a way to check if I'm ok."
        android:key="customizeMessage"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="customize_message_help"
        android:title="@string/customize_message" />

</PreferenceScreen>
